<resources>
    <string name="app_name">ReMIND</string>
    <string name="login">Login</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="menu">menu</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="recent">Recent</string>
    <string name="ReMIND">ReMIND</string>
    <string name="enter_your_mobile_number">Enter your mobile number</string>
    <string name="verify">Verify</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="skip"><![CDATA[Skip >>]]></string>
    <string name="favorites">Favorites</string>
    <string name="save">save</string>
    <string name="profile">Profile</string>
</resources>
